# hello-julia

./: .gitignore  Manifest.toml  Project.toml  README.md  devshell.toml  flake.nix  hello.jl  hello.py  pyproject.toml
