[tool.poetry]
name = "sentinal-hub"
version = "0.1.0"
description = ""
authors = ["Matt Camp <matt@aicampground.com>"]
readme = "README.md"
packages = [{include = "sentinal_hub"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
