[tool.poetry]
name = "scientific_test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "*"
pandas = "*"
requests = "^2.31.0"
pillow = "^10.1.0"
pyjulia = "^0.0.6"
juliacall = "^0.9.14"
julia = "^0.6.1"

[tool.poetry.scripts]
poetry = "poetry.console.application:hello"

[build-system]
requires = ["poetry-core>=1.1"]
build-backend = "poetry.core.masonry.api"

